# SF6-Afk-Farm-Notifier

./: .gitignore  api_service.py  app.py  config.py  example.toml  main.py  model.py  notifier_client.py  pyproject.toml  task.py  utilities.py
