[project]
name = "My-Python-Project"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chump>=1.6.0",
    "datamodel-code-generator>=0.53.0",
    "humanize>=4.15.0",
    "requests>=2.32.5",
    "sortedcontainers>=2.4.0",
]

#[project.scripts]
#test = "scripts.test:main"
